# pokeAPI-Haskell

./: .gitignore  CHANGELOG.md  LICENSE  README.md  flake.nix  pokeAPI-Haskell.cabal
app/: Main.hs
