cabal-version:      3.0
name:               pokeAPI-Haskell
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             ALEC
maintainer:         alecbanana@outlook.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable pokeAPI-Haskell
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.2.1,
                      http-conduit == 2.3.9,
                      scotty == 0.21,
                      cache == 0.1.3.0,
                      wai-extra == 3.1.17 ,
                      text == 2.1.2 
    hs-source-dirs:   app
    default-language: Haskell2010
